# olive

./: .clang-uml  .gitignore  CMakeLists.txt  README-intro.md  README.md  conanfile.py  vcpkg.json  vcpkg_temp.json
.mvs/py-script/: CMakeInstallToProjectDIR.py  CMakePresetsGenerator.py  CopyTemplateToRoot.py  ModifyCompileCommand.py  ModifyNinjaConfig.py  SetupWindowsVSEnv.py
.mvs/template/: .clang-uml
.mvs/util/: set_env.bat
.project/: Tips.txt
.project/py-script/: CMakeInstallToProjectDIR.py  CMakePresetsGenerator.py  CMakeWorkflow.py  CopyAllDllsToBuildDirForWin.py  CopyTemplateToRoot.py  GenerateQrcForQt.py  SetupWindowsVSEnv.py
.project/template/: CMakePresets.json.in  presets.json  template.json
.project/vcpkg/: opentimelineio-config.cmake  portfile.cmake
app/: CMakeLists.txt  core.cpp  core.h  main.cpp  version.cpp  version.h
app/audio/: CMakeLists.txt  audiomanager.cpp  audiomanager.h  audioprocessor.cpp  audioprocessor.h  audiovisualwaveform.cpp  audiovisualwaveform.h
app/cli/: CMakeLists.txt
app/cli/cliexport/: cliexportmanager.cpp  cliexportmanager.h
app/cli/cliprogress/: CMakeLists.txt  cliprogressdialog.cpp  cliprogressdialog.h
app/cli/clitask/: CMakeLists.txt  clitaskdialog.cpp  clitaskdialog.h
app/codec/: CMakeLists.txt  conformmanager.cpp  conformmanager.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  exportcodec.cpp  exportcodec.h  exportformat.cpp  exportformat.h  frame.cpp  frame.h  planarfiledevice.cpp  planarfiledevice.h
app/codec/ffmpeg/: CMakeLists.txt  ffmpegdecoder.cpp  ffmpegdecoder.h  ffmpegencoder.cpp  ffmpegencoder.h
app/codec/oiio/: CMakeLists.txt  oiiodecoder.cpp  oiiodecoder.h  oiioencoder.cpp  oiioencoder.h
app/common/: CMakeLists.txt  autoscroll.h  cancelableobject.h  channellayout.h  commandlineparser.cpp  commandlineparser.h  crashpadinterface.cpp  crashpadinterface.h  crashpadutils.h  debug.cpp  debug.h  decibel.h  define.h  digit.h  ffmpegutils.cpp  ffmpegutils.h  filefunctions.cpp  filefunctions.h  html.cpp  html.h  jobtime.cpp  jobtime.h  lerp.h  memorypool.h  ocioutils.cpp  ocioutils.h  oiioutils.cpp  oiioutils.h  otioutils.h  power.h  qtutils.cpp  qtutils.h  range.h  ratiodialog.cpp  ratiodialog.h  threadsafemap.h  tohex.h  util.h  xmlutils.cpp  xmlutils.h
app/config/: CMakeLists.txt  config.cpp  config.h
app/crashhandler/: CMakeLists.txt  FileWatcher.h  crashhandler.cpp  crashhandler.h
app/dialog/: CMakeLists.txt
app/dialog/about/: CMakeLists.txt  about.cpp  about.h  patreon.h  scrollinglabel.cpp  scrollinglabel.h
app/dialog/actionsearch/: CMakeLists.txt  actionsearch.cpp  actionsearch.h
app/dialog/autorecovery/: CMakeLists.txt  autorecoverydialog.cpp  autorecoverydialog.h
app/dialog/color/: CMakeLists.txt  colordialog.cpp  colordialog.h
app/dialog/configbase/: CMakeLists.txt  configdialogbase.cpp  configdialogbase.h  configdialogbasetab.cpp  configdialogbasetab.h
app/dialog/diskcache/: CMakeLists.txt  diskcachedialog.cpp  diskcachedialog.h
app/dialog/export/: CMakeLists.txt  export.cpp  export.h  exportadvancedvideodialog.cpp  exportadvancedvideodialog.h  exportaudiotab.cpp  exportaudiotab.h  exportformatcombobox.cpp  exportformatcombobox.h  exportsavepresetdialog.cpp  exportsavepresetdialog.h  exportsubtitlestab.cpp  exportsubtitlestab.h  exportvideotab.cpp  exportvideotab.h
app/dialog/footageproperties/: CMakeLists.txt  footageproperties.cpp  footageproperties.h
app/dialog/footagerelink/: CMakeLists.txt  footagerelinkdialog.cpp  footagerelinkdialog.h
app/node/: CMakeLists.txt  factory.cpp  factory.h  globals.cpp  globals.h  inputdragger.cpp  inputdragger.h  inputimmediate.cpp  inputimmediate.h  keyframe.cpp  keyframe.h  node.cpp  node.h  nodeundo.cpp  nodeundo.h  param.cpp  param.h  project.cpp  project.h  serializeddata.cpp  serializeddata.h  splitvalue.h  traverser.cpp  traverser.h  value.cpp  value.h  valuedatabase.cpp  valuedatabase.h
app/packaging/: CMakeLists.txt
app/panel/: CMakeLists.txt  panel.cpp  panel.h  panelmanager.cpp  panelmanager.h
app/render/: CMakeLists.txt  alphaassoc.h  audioplaybackcache.cpp  audioplaybackcache.h  audiowaveformcache.cpp  audiowaveformcache.h  cancelatom.h  colorprocessor.cpp  colorprocessor.h  colorprocessorcache.h  colortransform.h  diskmanager.cpp  diskmanager.h  framehashcache.cpp  framehashcache.h  framemanager.cpp  framemanager.h  loopmode.h  managedcolor.cpp  managedcolor.h  playbackcache.cpp  playbackcache.h  previewaudiodevice.cpp  previewaudiodevice.h  previewautocacher.cpp  previewautocacher.h  projectcopier.cpp  projectcopier.h  rendercache.h  renderer.cpp  renderer.h  renderjobtracker.cpp  renderjobtracker.h  rendermanager.cpp  rendermanager.h  rendermodes.h  renderprocessor.cpp  renderprocessor.h  renderticket.cpp  renderticket.h  (+7 more)
app/shaders/: CMakeLists.txt
app/task/: CMakeLists.txt  task.h  taskmanager.cpp  taskmanager.h
app/timeline/: CMakeLists.txt  timelinecommon.h  timelinecoordinate.cpp  timelinecoordinate.h  timelinemarker.cpp  timelinemarker.h  timelineundocommon.h  timelineundogeneral.cpp  timelineundogeneral.h  timelineundopointer.cpp  timelineundopointer.h  timelineundoripple.cpp  timelineundoripple.h  timelineundosplit.cpp  timelineundosplit.h  timelineundotrack.cpp  timelineundotrack.h  timelineundoworkarea.cpp  timelineundoworkarea.h  timelineworkarea.cpp  timelineworkarea.h
app/tool/: CMakeLists.txt  tool.h
app/ts/: CMakeLists.txt
app/ui/: CMakeLists.txt  colorcoding.cpp  colorcoding.h  humanstrings.cpp  humanstrings.h
app/undo/: CMakeLists.txt  undocommand.cpp  undocommand.h  undostack.cpp  undostack.h
app/widget/: CMakeLists.txt
app/window/: CMakeLists.txt
cmake/: ClangUtil.cmake  FindGoogleCrashpad.cmake  FindOpenEXR.cmake  FindOpenTimelineIO.cmake  QHeaders.cmake
ext/KDDockWidgets/: CMakeLists.txt
ext/core/: CMakeLists.txt
tests/: CMakeLists.txt  testutil.h
tests/compositing/: compositing-tests.cpp
tests/general/: common-tests.cpp
tests/timeline/: timeline-tests.cpp
uml_docs/: kddockwidgets_class.puml  olive_class.puml  olive_module_overview.puml
(+973 files in other folders)
